--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -25,18 +25,22 @@
           alt="">
       </div>
     {% endif %}
-    <h2 class="archive__item-title" itemprop="headline">
-      {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
-      {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-      {% endif %}
+    {% if post.venue or post.date %}
+      <p class="archive__item-title" itemprop="headline">
+        {% if post.venue %}
+          <strong>{{ post.venue }}</strong>{% if post.date %}<strong>, </strong> {% endif %}
+        {% endif %}
+        {% if post.date %}
+          <strong>{{ post.date | date: '%d %B %Y' }}</strong>
+        {% endif %}
+      </p>
+    {% endif %}
+    <h2 class="archive__item-excerpt" itemprop="description">
+      <span><i>{{ title }}</i></span>
     </h2>
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
-    {% if post.date %}<p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ post.date | date: '%B %d, %Y' }}</p>{% endif %}
-    {% if post.venue %}<p class="archive__item-excerpt" itemprop="description">{{post.type}}, {{ post.venue }},  {{post.location}} {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>{% endif %}
   </article>
 </div>
