--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -28,9 +28,13 @@
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+      <a href="{{ post.link }}">{{ title }}</a> 
+      <a href="{{ post.paperurl }}" rel="external">
+        <i class="fa fa-link" aria-hidden="true" title="Paper URL"></i>
+        <span class="sr-only">Paper URL</span>
+      </a>
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+      <a href="{{ post.paperurl }}" rel="external">{{ title }}</a>
       {% endif %}
     </h2>
     
@@ -41,7 +45,27 @@
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
-          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        <p>
+          {% assign author_list = "" %}
+          {% assign authors = post.authors | split: ", " %}
+          {% for author in authors %}
+            {% assign author = author | strip %}
+            {% if author == "David Anugraha" %}
+              {% capture formatted_author %}<u>{{ author }}</u>{% endcapture %}
+            {% else %}
+              {% capture formatted_author %}{{ author }}{% endcapture %}
+            {% endif %}
+
+            {% if forloop.first %}
+              {% assign author_list = formatted_author %}
+            {% else %}
+              {% assign author_list = author_list | append: ", " | append: formatted_author %}
+            {% endif %}
+          {% endfor %}
+          {{ author_list }}
+          <br>
+          <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%b %Y" }}
+        </p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
@@ -52,18 +76,23 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
     
-    {% if post.citation and post.paperurl and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
+    {% if post.citation and post.paperurl and post.codeurl %}
+      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Paper</a> | <a href="{{ post.codeurl }}">Code</a></p>
     {% elsif post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a></p>
-    {% elsif post.citation and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Slides</a></p>
+    <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Paper</a></p>
+    {% elsif post.citation and post.codeurl %}
+      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.codeurl }}">Code</a></p>
+    {% elsif post.paperurl and post.codeurl %}
+      <p>
+        <a href="{{ post.paperurl }}" style="margin-right: 5px;">Paper</a>
+        <a href="{{ post.codeurl }}">Code</a>
+      </p>
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }}</p>
     {% elsif post.paperurl %}
-      <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
-    {% elsif post.slidesurl %}
-      <p>Download <a href="{{ post.slidesurl }}">Download Slides</a></p></p>
+      <p><a href=" {{ post.paperurl }} ">Paper</a></p>
+    {% elsif post.codeurl %}
+      <p>Download <a href="{{ post.codeurl }}">Code</a></p>
     {% endif %}
 
   </article>
