--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -72,7 +72,7 @@
         </p>
 
         {% if has_equal_contribution %}
-          <p><em>Note: Authors marked with * contributed equally.</em></p>
+          <p><em>*Equal Contribution</em></p>
         {% endif %}
 
         {% elsif post.date %}
