--- a/_includes/archive-single-service.html
+++ b/_includes/archive-single-service.html
@@ -2,8 +2,13 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">
+    <h3 class="archive__item-title" itemprop="headline">
       <strong>{{ post.title }}</strong>
-    </h2>
+    </h3>
+    <ul>
+      {% for title in post.titles %}
+        <li>{{ title }}</li>
+      {% endfor %}
+    </ul>
   </article>
 </div>
