--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -2,6 +2,6 @@
 
 <div class="cv-link">
   <a href="{{ base_path }}/files/cv.pdf" target="_blank" rel="noopener noreferrer">
-    View My CV (PDF)
+    View My CV (Last Updated 20 Oct 2025)
   </a>
 </div>
