Fix bug dark mode^

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -68,6 +68,6 @@
       </p>
     </div>
 
-    <p class="fun-modal__footer">Congrats on finding this 🎉! Reach out anytime, whether it's about research, song recs, food spots, or if you are in a game queue 🫡</p>
+    <p class="fun-modal__footer">Congrats on finding this 🎉! Reach out anytime, whether it's about research, song recs, food spots, life, or if you are in a game queue 🫡</p>
   </div>
 </div>
